# Phoenix-Mall-Server

./: Cargo.toml  fix_entities_after_generation.sh  spit.php
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20260413_083123_extend_users_table.rs  m20260413_083210_create_user_session.rs  m20260413_083227_categories.rs  m20260413_083240_products.rs  m20260413_083250_create_product_images.rs  m20260413_083302_favorites.rs  m20260414_180046_add_favorites.rs  m20260415_141533_carts.rs  m20260415_141543_orders.rs  m20260415_141552_create_order_items.rs  m20260416_095308_add_description_to_categories.rs  m20260417_235637_add_product_reviews.rs  m20260419_001159_add_chat_tables.rs  m20260419_151858_add_follows_and_notifications.rs  m20260422_160649_add_online_status.rs  m20260423_120640_create_category_specs.rs  m20260423_120848_create_product_specs.rs  m20260423_120930_locations.rs  m20260423_121240_alter_products_add_fields.rs  m20260502_164841_add_price_intel_tables.rs
src/: app.rs  lib.rs  openapi.rs
src/controllers/: admin.rs  auth.rs  cart.rs  categories.rs  category_specs.rs  chat.rs  favorites.rs  follows.rs  images.rs  mod.rs  online_status.rs  price_intel.rs  product.rs  profile.rs  regions.rs  reviews.rs  wishlist.rs
src/fixtures/: categories.sql  categories.txt  categories.yaml  categories_specs.sql  categories_specs.yaml  locations.sql  locations.yaml  remaining_categories.sql  users.yaml
src/middlewares/: admin.rs  online_status.rs  online_tracker.rs
src/models/: carts.rs  categories.rs  category_specs.rs  mod.rs  (+18 more)
(+50 files in other folders)
