[workspace]

[package]
name = "phoenix_server"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "phoenix_server-cli"


[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["ws"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
nanoid = "0.4.0"
num-traits = "0.2.19"
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
lazy_static = "1.5.0"
tokio-tungstenite = "0.21"
ws = "0.9.2"

[[bin]]
name = "phoenix_server-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
